# Sweeps_Relief

./: .gitignore  LICENSE  README.md  TODO.md  package-lock.json  package.json  pyproject.toml  trust_store.json
.github/workflows/: ci.yml  mac-helper.yml
apps/browser-guard-chromium/: README.md  package.json  tsconfig.json
apps/browser-guard-chromium/fixtures/: benign.html  high_risk_cashier.html  login_surface.html  risky.html
apps/browser-guard-chromium/scripts/: build.mjs  compile-harness.mjs  manual-harness.ts
apps/browser-guard-chromium/src/: background.ts  bundledRules.ts  (+5 more)
apps/browser-guard-safari/: README.md
apps/cli/: README.md
apps/ios-companion/: README.md
apps/mac-helper/: .gitignore  PRIVILEGED_APPLY_CHECKLIST.md  Package.resolved  Package.swift  README.md  VALIDATION_CHECKLIST.md  config.example.json
config/: known_high_risk_domains.json  protected_patterns.example.json  risk_terms.json  scoring.json
data/normalized/: example.txt
data/published/: policy.content.json
docs/: apple-platform-plan.md  architecture.md  crypto-verification.md  discovery-pipeline.md  enforcement-matrix.md  funnel-intelligence.md  key_rotation.md  oracle-model.md  reporting.md  threat-model.md  trust_store.md
keys/: README.md
scripts/: trust_store_entry.py
src/sweeps_relief/: __init__.py  __main__.py  cli.py
tests/: test_envelope_ingest.py  test_envelope_verifier.py  test_trust_store_entry_script.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_crypto.py  test_events.py  test_heuristics.py  test_normalize.py  test_policy_sign.py
(+65 files in other folders)
