[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sweeps-relief"
version = "0.1.0"
description = "Recovery-first, signed-policy enforcement tooling for sweeps-casino defense on Apple platforms."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sweeps_Relief contributors" }]
dependencies = [
  "cryptography>=42.0.0",
  "pydantic>=2.6.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
sweeps-relief = "sweeps_relief.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sweeps_relief"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/data",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
